Improve AppImage error message with multiple GUI fallbacks
- Add xmessage and notify-send as additional fallback options
- Use || true to prevent dialog failures from stopping script
- Add 2-second sleep delay so user sees the message before exit
- Ensures error message is ALWAYS displayed before AppImage exits
- Terminal message + GUI dialog + notification all tried in order

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -232,6 +232,8 @@ jobs:
           
           # Check if WebKit2GTK 4.1 is available on the system
           if ! ldconfig -p 2>/dev/null | grep -q "libwebkit2gtk-4.1.so.0"; then
+            
+            # Terminal message (always shown)
             echo ""
             echo "╔══════════════════════════════════════════════════════════════╗"
             echo "║  HyPrism requires WebKit2GTK 4.1                            ║"
@@ -249,16 +251,33 @@ jobs:
             echo "╚══════════════════════════════════════════════════════════════╝"
             echo ""
             
-            # Try to show a GUI dialog
+            # GUI dialog with multiple fallbacks
+            ERROR_MSG="HyPrism requires WebKit2GTK 4.1 to run.
+
+OPTION 1 (Recommended): Use Flatpak
+Download HyPrism.flatpak from the same release.
+It bundles all dependencies - no setup required!
+
+OPTION 2: Install WebKit on your system
+• Arch:   sudo pacman -S webkit2gtk-4.1
+• Ubuntu: sudo apt install libwebkit2gtk-4.1-0
+• Fedora: sudo dnf install webkit2gtk4.1
+
+Most Linux desktops already have WebKit installed."
+            
+            # Try GUI dialogs in order of preference
             if command -v zenity &> /dev/null; then
-              zenity --error --title="HyPrism - Missing Dependency" \
-                --text="WebKit2GTK 4.1 is required but not installed.\n\n<b>OPTION 1 (Recommended):</b> Use Flatpak\nDownload HyPrism.flatpak from the same release.\nIt bundles everything - no setup needed!\n\n<b>OPTION 2:</b> Install WebKit:\n• Arch: sudo pacman -S webkit2gtk-4.1\n• Ubuntu: sudo apt install libwebkit2gtk-4.1-0\n• Fedora: sudo dnf install webkit2gtk4.1" \
-                --width=500 2>/dev/null
+              zenity --error --title="HyPrism - Missing Dependency" --text="$ERROR_MSG" --width=500 --no-wrap 2>/dev/null || true
             elif command -v kdialog &> /dev/null; then
-              kdialog --error "WebKit2GTK 4.1 is required but not installed.\n\nOPTION 1 (Recommended): Use Flatpak\nDownload HyPrism.flatpak - bundles everything!\n\nOPTION 2: Install WebKit:\n• Arch: sudo pacman -S webkit2gtk-4.1\n• Ubuntu: sudo apt install libwebkit2gtk-4.1-0" \
-                --title "HyPrism - Missing Dependency" 2>/dev/null
+              kdialog --title "HyPrism - Missing Dependency" --error "$ERROR_MSG" 2>/dev/null || true
+            elif command -v xmessage &> /dev/null; then
+              xmessage -center -title "HyPrism - Missing Dependency" "$ERROR_MSG" 2>/dev/null || true
+            elif command -v notify-send &> /dev/null; then
+              notify-send -u critical "HyPrism - Missing Dependency" "WebKit2GTK 4.1 required. Use Flatpak or install webkit2gtk-4.1" 2>/dev/null || true
             fi
             
+            # Wait a moment for user to see the message before exiting
+            sleep 2
             exit 1
           fi
           
