fix mac os no display

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -196,6 +196,7 @@ jobs:
           mkdir -p "artifacts/HyPrism-x64.app/Contents/MacOS"
           mkdir -p "artifacts/HyPrism-x64.app/Contents/Resources"
           cp artifacts/osx-x64/HyPrism "artifacts/HyPrism-x64.app/Contents/MacOS/"
+          cp artifacts/osx-x64/Photino.Native.dylib "artifacts/HyPrism-x64.app/Contents/MacOS/" || true
           cp -R artifacts/osx-x64/wwwroot "artifacts/HyPrism-x64.app/Contents/Resources/"
           cp artifacts/osx-x64/jre.json "artifacts/HyPrism-x64.app/Contents/Resources/" || true
           cp packaging/macos/Info.plist "artifacts/HyPrism-x64.app/Contents/"
@@ -206,6 +207,7 @@ jobs:
           mkdir -p "artifacts/HyPrism-arm64.app/Contents/MacOS"
           mkdir -p "artifacts/HyPrism-arm64.app/Contents/Resources"
           cp artifacts/osx-arm64/HyPrism "artifacts/HyPrism-arm64.app/Contents/MacOS/"
+          cp artifacts/osx-arm64/Photino.Native.dylib "artifacts/HyPrism-arm64.app/Contents/MacOS/" || true
           cp -R artifacts/osx-arm64/wwwroot "artifacts/HyPrism-arm64.app/Contents/Resources/"
           cp artifacts/osx-arm64/jre.json "artifacts/HyPrism-arm64.app/Contents/Resources/" || true
           cp packaging/macos/Info.plist "artifacts/HyPrism-arm64.app/Contents/"
