--- a/.github/workflows/build-only.yml
+++ b/.github/workflows/build-only.yml
@@ -272,7 +272,7 @@ jobs:
           2) Run Open_HyPrism.command to clear quarantine and launch.
           EOF
           ln -s /Applications dmg-x64/Applications
-          hdiutil create -volname "HyPrism" -srcfolder dmg-x64 -ov -format UDZO artifacts/HyPrism-macos-x64.dmg
+          hdiutil create -volname "HyPrism-x64" -srcfolder dmg-x64 -ov -format UDZO artifacts/HyPrism-macos-x64.dmg
 
           mkdir -p dmg-arm64
           cp -R "artifacts/HyPrism-arm64.app" "dmg-arm64/HyPrism.app"
@@ -289,7 +289,7 @@ jobs:
           2) Run Open_HyPrism.command to clear quarantine and launch.
           EOF
           ln -s /Applications dmg-arm64/Applications
-          hdiutil create -volname "HyPrism" -srcfolder dmg-arm64 -ov -format UDZO artifacts/HyPrism-macos-arm64.dmg
+          hdiutil create -volname "HyPrism-arm64" -srcfolder dmg-arm64 -ov -format UDZO artifacts/HyPrism-macos-arm64.dmg
 
       - name: Upload macOS artifacts
         uses: actions/upload-artifact@v4
