Fix macOS packaging and add mac updater helper
- Simplify release macOS job to arm64-only, remove codesign/install_name_tool and keep quarantine helper command
- Update version.json and release notes to match arm64-only macOS build
- Implement UpdateAsync to delete old /Applications/HyPrism.app, download latest arm64 DMG to Downloads, and open it (other platforms open releases page)
- Wire frontend Update button to new helper and show success/fallback info

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -178,14 +178,6 @@ jobs:
           npm ci
           npm run build
 
-      - name: Build macOS x64
-        run: |
-          dotnet restore
-          dotnet publish -c Release -r osx-x64 --self-contained true \
-            /p:PublishSingleFile=true /p:PublishReadyToRun=true \
-            /p:IncludeNativeLibrariesForSelfExtract=true \
-            -o artifacts/osx-x64
-
       - name: Build macOS arm64
         run: |
           dotnet publish -c Release -r osx-arm64 --self-contained true \
@@ -193,90 +185,55 @@ jobs:
             /p:IncludeNativeLibrariesForSelfExtract=true \
             -o artifacts/osx-arm64
 
-      - name: Create macOS app bundles
+      - name: Create macOS app bundle (arm64 only)
         run: |
-          # Create x64 app bundle
-          mkdir -p "artifacts/HyPrism-x64.app/Contents/MacOS"
-          mkdir -p "artifacts/HyPrism-x64.app/Contents/Resources"
-          cp artifacts/osx-x64/HyPrism "artifacts/HyPrism-x64.app/Contents/MacOS/"
-          cp -R artifacts/osx-x64/wwwroot "artifacts/HyPrism-x64.app/Contents/Resources/"
-          cp artifacts/osx-x64/jre.json "artifacts/HyPrism-x64.app/Contents/Resources/" || true
-          cp packaging/macos/Info.plist "artifacts/HyPrism-x64.app/Contents/"
-          cp packaging/macos/HyPrism.icns "artifacts/HyPrism-x64.app/Contents/Resources/"
-          chmod +x "artifacts/HyPrism-x64.app/Contents/MacOS/HyPrism"
+          set -e
           
-          # Fix rpath for dylib
-          install_name_tool -add_rpath "@executable_path" "artifacts/HyPrism-x64.app/Contents/MacOS/HyPrism" || true
+          mkdir -p "artifacts/HyPrism.app/Contents/MacOS"
+          mkdir -p "artifacts/HyPrism.app/Contents/Resources"
           
-          # Create PkgInfo
-          echo "APPL????" > "artifacts/HyPrism-x64.app/Contents/PkgInfo"
+          if [ ! -f "artifacts/osx-arm64/HyPrism" ]; then
+            echo "ERROR: HyPrism binary not found!"
+            ls -la artifacts/osx-arm64/ || true
+            exit 1
+          fi
           
-          # Create arm64 app bundle
-          mkdir -p "artifacts/HyPrism-arm64.app/Contents/MacOS"
-          mkdir -p "artifacts/HyPrism-arm64.app/Contents/Resources"
-          cp artifacts/osx-arm64/HyPrism "artifacts/HyPrism-arm64.app/Contents/MacOS/"
-          cp -R artifacts/osx-arm64/wwwroot "artifacts/HyPrism-arm64.app/Contents/Resources/"
-          cp artifacts/osx-arm64/jre.json "artifacts/HyPrism-arm64.app/Contents/Resources/" || true
-          cp packaging/macos/Info.plist "artifacts/HyPrism-arm64.app/Contents/"
-          cp packaging/macos/HyPrism.icns "artifacts/HyPrism-arm64.app/Contents/Resources/"
-          chmod +x "artifacts/HyPrism-arm64.app/Contents/MacOS/HyPrism"
-          
-          # Fix rpath for dylib
-          install_name_tool -add_rpath "@executable_path" "artifacts/HyPrism-arm64.app/Contents/MacOS/HyPrism" || true
-          
-          # Create PkgInfo
-          echo "APPL????" > "artifacts/HyPrism-arm64.app/Contents/PkgInfo"
+          cp artifacts/osx-arm64/HyPrism "artifacts/HyPrism.app/Contents/MacOS/"
+          cp -R artifacts/osx-arm64/wwwroot "artifacts/HyPrism.app/Contents/Resources/"
+          cp artifacts/osx-arm64/jre.json "artifacts/HyPrism.app/Contents/Resources/" || true
+          cp packaging/macos/Info.plist "artifacts/HyPrism.app/Contents/"
+          cp packaging/macos/HyPrism.icns "artifacts/HyPrism.app/Contents/Resources/"
+          chmod +x "artifacts/HyPrism.app/Contents/MacOS/HyPrism"
+          echo "APPL????" > "artifacts/HyPrism.app/Contents/PkgInfo"
 
-      - name: Sign macOS apps (ad-hoc, required after install_name_tool)
+      - name: Create DMG (arm64 only, keeps helper command)
         run: |
-          codesign --force --deep --sign - "artifacts/HyPrism-x64.app"
-          codesign --force --deep --sign - "artifacts/HyPrism-arm64.app"
-
-      - name: Create DMG files
-        run: |
-          # Create x64 DMG
-          mkdir -p dmg-x64
-          cp -R "artifacts/HyPrism-x64.app" "dmg-x64/HyPrism.app"
-          cat > "dmg-x64/Open_HyPrism.command" << 'EOF'
+          mkdir -p dmg
+          cp -R "artifacts/HyPrism.app" "dmg/HyPrism.app"
+          
+          # Helper script to clear quarantine and open
+          cat > "dmg/Open_HyPrism.command" << 'EOF'
           #!/bin/bash
           APP="$(dirname "$0")/HyPrism.app"
           xattr -cr "$APP"
           open "$APP"
           EOF
-          chmod +x "dmg-x64/Open_HyPrism.command"
-          cat > "dmg-x64/README.txt" << 'EOF'
-          If macOS says the app is damaged or incomplete:
-          1) Drag HyPrism.app into Applications.
-          2) Run Open_HyPrism.command to clear quarantine and launch.
-          EOF
-          ln -s /Applications dmg-x64/Applications
-          hdiutil create -volname "HyPrism-x64" -srcfolder dmg-x64 -ov -format UDZO artifacts/HyPrism-macos-x64.dmg
+          chmod +x "dmg/Open_HyPrism.command"
           
-          # Create arm64 DMG
-          mkdir -p dmg-arm64
-          cp -R "artifacts/HyPrism-arm64.app" "dmg-arm64/HyPrism.app"
-          cat > "dmg-arm64/Open_HyPrism.command" << 'EOF'
-          #!/bin/bash
-          APP="$(dirname "$0")/HyPrism.app"
-          xattr -cr "$APP"
-          open "$APP"
-          EOF
-          chmod +x "dmg-arm64/Open_HyPrism.command"
-          cat > "dmg-arm64/README.txt" << 'EOF'
+          cat > "dmg/README.txt" << 'EOF'
           If macOS says the app is damaged or incomplete:
           1) Drag HyPrism.app into Applications.
           2) Run Open_HyPrism.command to clear quarantine and launch.
           EOF
-          ln -s /Applications dmg-arm64/Applications
-          hdiutil create -volname "HyPrism-arm64" -srcfolder dmg-arm64 -ov -format UDZO artifacts/HyPrism-macos-arm64.dmg
+          
+          ln -s /Applications dmg/Applications
+          hdiutil create -volname "HyPrism" -srcfolder dmg -ov -format UDZO artifacts/HyPrism-macos-arm64.dmg
 
       - name: Upload macOS artifacts
         uses: actions/upload-artifact@v4
         with:
           name: macos-builds
-          path: |
-            artifacts/HyPrism-macos-x64.dmg
-            artifacts/HyPrism-macos-arm64.dmg
+          path: artifacts/HyPrism-macos-arm64.dmg
 
   release:
     needs: [build-linux, build-windows, build-macos]
@@ -331,12 +288,6 @@ jobs:
               }
             },
             "darwin": {
-              "amd64": {
-                "launcher": {
-                  "url": "https://github.com/yyyumeniku/HyPrism/releases/download/$TAG_NAME/HyPrism-macos-x64.dmg",
-                  "sha256": ""
-                }
-              },
               "arm64": {
                 "launcher": {
                   "url": "https://github.com/yyyumeniku/HyPrism/releases/download/$TAG_NAME/HyPrism-macos-arm64.dmg",
@@ -361,7 +312,6 @@ jobs:
             - `HyPrism-windows-x64.zip` - Windows 64-bit
             
             **macOS**
-            - `HyPrism-macos-x64.dmg` - macOS Intel
             - `HyPrism-macos-arm64.dmg` - macOS Apple Silicon
             
             **Linux**
