feat: Add F2P online mode with auth server support
- Add AuthService for F2P session token retrieval
- Add ClientPatcher to patch game binary (hytale.com → sanasol.ws)
- Fix auth scopes (hytale:client, hytale:server)
- Add online mode toggle in settings
- Add profile editor and skin customizer UI
- Add customizable accent colors and backgrounds
- Add hardware acceleration toggle
- Add pending update confirmation modal
- Improve game launch with clean environment (env -i)
- Remove debug Python scripts
- Various UI improvements and fixes

--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,11 @@ scripts/run.sh
 artifacts/
 dmg-arm64/Applications
 scripts/build-linux-all-ubuntu.sh
+# Python debug scripts
+*.py
+__pycache__/
+*.pyc
+
+# Virtual environments
+.venv/
+venv/
