fix(release): enable overwrite for release assets in workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -545,5 +545,6 @@ jobs:
             - Updated to support webkit2gtk-4.1
           draft: false
           prerelease: ${{ github.event.inputs.prerelease }}
+          overwrite: true
           files: |
             release-assets/*
