--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -164,12 +164,12 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: flatpak-repo
-          path: flatpak-repo
+          path: site/flatpak-repo
 
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: flatpak-repo
+          path: site
 
       - name: Deploy to GitHub Pages
         id: deploy
