--- a/HyPrism.csproj
+++ b/HyPrism.csproj
@@ -39,6 +39,7 @@
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
     <PackageReference Include="DiscordRichPresence" Version="1.6.1.70" />
     <PackageReference Include="SkiaSharp.NativeAssets.Linux" Version="3.116.1" />
+    <PackageReference Include="Svg.Skia" Version="3.4.1" />
     <PackageReference Include="System.Text.Json" Version="10.0.2" />
   </ItemGroup>
 
@@ -48,7 +49,7 @@
 
   <!-- Avalonia XAML files -->
   <ItemGroup>
-    <AvaloniaResource Include="Assets\**" />
+    <AvaloniaResource Include="Assets/**" />
   </ItemGroup>
 
   <ItemGroup>
