--- a/packaging/macos/Info.plist
+++ b/packaging/macos/Info.plist
@@ -7,7 +7,7 @@
     <key>CFBundleExecutable</key>
     <string>HyPrism</string>
     <key>CFBundleIconFile</key>
-    <string>HyPrism.icns</string>
+    <string>hyprism-macos.icns</string>
     <key>CFBundleIdentifier</key>
     <string>dev.hyprism.HyPrism</string>
     <key>CFBundleInfoDictionaryVersion</key>
