--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -114,6 +114,11 @@ jobs:
           chmod +x Scripts/publish.sh
           ./Scripts/publish.sh linux --arch ${{ matrix.arch }}
 
+      - name: Build Flatpak ${{ matrix.arch }}
+        run: |
+          chmod +x Scripts/publish.sh
+          ./Scripts/publish.sh flatpak --arch ${{ matrix.arch }}
+
       - name: Upload Linux ${{ matrix.arch }} artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -123,6 +128,7 @@ jobs:
             dist/*.deb
             dist/*.rpm
             dist/*.tar.xz
+            dist/*.flatpak
           if-no-files-found: warn
 
   # ============================================================================
