Enhance ModService with CDN URL fallback and improve file resolution
- Added a fallback mechanism in ModService to derive a deterministic CDN URL from fileId and fileName if CurseForge fails to provide a download URL
- Implemented a method to resolve CurseForge file information, improving error handling and logging for file downloads
- Updated the download process to include retry logic for failed downloads, enhancing reliability
- Improved user interaction in the UI by refining mod selection and download processes, including better handling of selected mods and their versions
- Enhanced configuration handling in ProfileManagementService to ensure profiles are initialized correctly
- Updated Russian and English documentation to reflect changes in ModService functionality and user interactions

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -85,6 +85,7 @@ jobs:
             -name "*.deb" -o \
             -name "*.rpm" -o \
             -name "*.tar.xz" -o \
+            -name "*.flatpak" -o \
             -name "*.dmg" -o \
             -name "*.zip" -o \
             -name "*.exe" \
@@ -108,7 +109,8 @@ jobs:
                   "appimage": "https://github.com/$REPO/releases/download/$TAG/HyPrism-linux-x64-$VERSION.AppImage",
                   "deb": "https://github.com/$REPO/releases/download/$TAG/HyPrism-linux-x64-$VERSION.deb",
                   "rpm": "https://github.com/$REPO/releases/download/$TAG/HyPrism-linux-x64-$VERSION.rpm",
-                  "tar": "https://github.com/$REPO/releases/download/$TAG/HyPrism-linux-x64-$VERSION.tar.xz"
+                  "tar": "https://github.com/$REPO/releases/download/$TAG/HyPrism-linux-x64-$VERSION.tar.xz",
+                  "flatpak": "https://github.com/$REPO/releases/download/$TAG/HyPrism-linux-x64-$VERSION.flatpak"
                 }
               },
               "windows": {
@@ -173,6 +175,7 @@ jobs:
             | **Linux** | x64 | DEB | `HyPrism-linux-x64-${{ steps.version.outputs.version }}.deb` |
             | **Linux** | x64 | RPM | `HyPrism-linux-x64-${{ steps.version.outputs.version }}.rpm` |
             | **Linux** | x64 | tar.xz | `HyPrism-linux-x64-${{ steps.version.outputs.version }}.tar.xz` |
+            | **Linux** | x64 | Flatpak | `HyPrism-linux-x64-${{ steps.version.outputs.version }}.flatpak` |
             
             ### System Requirements
             
