--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -112,7 +112,7 @@ jobs:
       - name: Build Linux ${{ matrix.arch }}
         run: |
           chmod +x Scripts/publish.sh
-          ./Scripts/publish.sh linux --arch ${{ matrix.arch }}
+          ./Scripts/publish.sh linux flatpak --arch ${{ matrix.arch }}
 
       - name: Upload Linux ${{ matrix.arch }} artifacts
         uses: actions/upload-artifact@v4
@@ -123,6 +123,7 @@ jobs:
             dist/*.deb
             dist/*.rpm
             dist/*.tar.xz
+            dist/*.flatpak
           if-no-files-found: warn
 
   # ============================================================================
@@ -151,6 +152,17 @@ jobs:
 
       - name: Install Electron.NET CLI
         run: dotnet tool install --global ElectronNET.CLI
+
+      - name: Generate Windows ICO icon
+        shell: bash
+        run: |
+          mkdir -p Build
+          if command -v magick >/dev/null 2>&1; then
+            magick Frontend/src/assets/images/appicon.png -define icon:auto-resize=16,24,32,48,64,128,256 Build/icon.ico
+            echo "Generated Build/icon.ico from appicon.png"
+          else
+            echo "magick not found; using existing Build/icon.ico"
+          fi
 
       - name: Build Windows x64
         shell: bash
@@ -242,9 +254,9 @@ jobs:
           WINDOWS="${{ needs.build-windows.result }}"
           MACOS="${{ needs.build-macos.result }}"
           
-          [[ "$LINUX" == "success" ]] && echo "| Linux (x64 + ARM64) | ✅ Success |" >> $GITHUB_STEP_SUMMARY || \
-          [[ "$LINUX" == "skipped" ]] && echo "| Linux (x64 + ARM64) | ⏭️ Skipped |" >> $GITHUB_STEP_SUMMARY || \
-          echo "| Linux (x64 + ARM64) | ❌ Failed |" >> $GITHUB_STEP_SUMMARY
+          [[ "$LINUX" == "success" ]] && echo "| Linux (x64) | ✅ Success |" >> $GITHUB_STEP_SUMMARY || \
+          [[ "$LINUX" == "skipped" ]] && echo "| Linux (x64) | ⏭️ Skipped |" >> $GITHUB_STEP_SUMMARY || \
+          echo "| Linux (x64) | ❌ Failed |" >> $GITHUB_STEP_SUMMARY
           
           [[ "$WINDOWS" == "success" ]] && echo "| Windows (x64) | ✅ Success |" >> $GITHUB_STEP_SUMMARY || \
           [[ "$WINDOWS" == "skipped" ]] && echo "| Windows (x64) | ⏭️ Skipped |" >> $GITHUB_STEP_SUMMARY || \
