--- a/HyPrism.csproj
+++ b/HyPrism.csproj
@@ -11,7 +11,7 @@
 
   <!-- Electron.NET application metadata -->
   <PropertyGroup Label="ElectronNetCommon">
-    <ElectronPackageId>com.hyprismteam.hyprism</ElectronPackageId>
+    <ElectronPackageId>io.github.HyPrismTeam.HyPrism</ElectronPackageId>
     <Title>HyPrism</Title>
     <Version>3.0.0</Version>
     <Description>Cross-platform Hytale launcher</Description>
