--- a/Properties/linux/flatpak/com.hyprismteam.hyprism.desktop
+++ b/Properties/linux/flatpak/com.hyprismteam.hyprism.desktop
@@ -2,7 +2,7 @@
 Name=HyPrism
 Comment=All in one launcher and mod manager fotr Hytale
 Exec=hyprism-launcher-wrapper.sh
-Icon=com.hyprismteam.hyprism
+Icon=io.github.HyPrismTeam.HyPrism
 Terminal=false
 Type=Application
 Categories=Game;
