--- a/Properties/linux/flatpak/com.hyprismteam.hyprism.yml
+++ b/Properties/linux/flatpak/com.hyprismteam.hyprism.yml
@@ -1,4 +1,4 @@
-app-id: com.hyprismteam.hyprism
+app-id: io.github.HyPrismTeam.HyPrism
 runtime: org.freedesktop.Platform
 runtime-version: '25.08'
 sdk: org.freedesktop.Sdk
@@ -128,18 +128,18 @@ modules:
       - install -d /app/bin
       - install -Dm755 hyprism-launcher-wrapper.sh /app/bin/hyprism-launcher-wrapper.sh
       - chmod +x /app/bin/hyprism-launcher-wrapper.sh
-      - install -Dm644 com.hyprismteam.hyprism.png /app/share/icons/hicolor/256x256/apps/com.hyprismteam.hyprism.png
-      - install -Dm644 com.hyprismteam.hyprism.desktop /app/share/applications/com.hyprismteam.hyprism.desktop
-      - install -Dm644 com.hyprismteam.hyprism.metainfo.xml /app/share/metainfo/com.hyprismteam.hyprism.metainfo.xml
+      - install -Dm644 io.github.HyPrismTeam.HyPrism.png /app/share/icons/hicolor/256x256/apps/io.github.HyPrismTeam.HyPrism.png
+      - install -Dm644 io.github.HyPrismTeam.HyPrism.desktop /app/share/applications/io.github.HyPrismTeam.HyPrism.desktop
+      - install -Dm644 io.github.HyPrismTeam.HyPrism.metainfo.xml /app/share/metainfo/io.github.HyPrismTeam.HyPrism.metainfo.xml
     sources:
       - type: dir
         path: bundle
         dest: bundle
       - type: file
-        path: com.hyprismteam.hyprism.png
+        path: io.github.HyPrismTeam.HyPrism.png
       - type: file
         path: hyprism-launcher-wrapper.sh
       - type: file
-        path: com.hyprismteam.hyprism.desktop
+        path: io.github.HyPrismTeam.HyPrism.desktop
       - type: file
-        path: com.hyprismteam.hyprism.metainfo.xml
+        path: io.github.HyPrismTeam.HyPrism.metainfo.xml
