--- a/Properties/macos/Info.plist
+++ b/Properties/macos/Info.plist
@@ -9,7 +9,7 @@
     <key>CFBundleIconFile</key>
     <string>icon.icns</string>
     <key>CFBundleIdentifier</key>
-    <string>com.hyprismteam.hyprism</string>
+    <string>io.github.HyPrismTeam.HyPrism</string>
     <key>CFBundleInfoDictionaryVersion</key>
     <string>6.0</string>
     <key>CFBundleName</key>
