--- a/Properties/linux/flatpak/io.github.HyPrismTeam.HyPrism.yml
+++ b/Properties/linux/flatpak/io.github.HyPrismTeam.HyPrism.yml
@@ -4,7 +4,7 @@ runtime-version: '25.08'
 sdk: org.freedesktop.Sdk
 base: org.electronjs.Electron2.BaseApp
 base-version: '25.08'
-command: hyprism-launcher-wrapper.sh
+command: hyprism-launcher-wrapper
 
 sdk-extensions:
   - org.freedesktop.Sdk.Extension.node22
@@ -117,14 +117,15 @@ modules:
     buildsystem: simple
     build-commands:
       - mkdir -p /app/lib/i386-linux-gnu/codecs-extra
-      - install -d /app/bin/HyPrism
-      - install -Dm755 linux-unpacked/HyPrism /app/bin/HyPrism/HyPrism
-      - cp -R linux-unpacked/* /app/bin/HyPrism
-      - cp -R wwwroot /app/bin/HyPrism
-      - install -Dm755 hyprism-launcher-wrapper.sh /app/bin/hyprism-launcher-wrapper.sh
+      - install -d /app/HyPrism
+      - cp -R linux-unpacked/* /app/HyPrism
+      - chmod +x /app/HyPrism/HyPrism
+      - cp -R wwwroot /app/wwwroot
+      - install -Dm755 hyprism-launcher-wrapper.sh /app/bin/hyprism-launcher-wrapper
       - install -Dm644 io.github.HyPrismTeam.HyPrism.png /app/share/icons/hicolor/256x256/apps/io.github.HyPrismTeam.HyPrism.png
       - install -Dm644 io.github.HyPrismTeam.HyPrism.desktop /app/share/applications/io.github.HyPrismTeam.HyPrism.desktop
       - install -Dm644 io.github.HyPrismTeam.HyPrism.metainfo.xml /app/share/metainfo/io.github.HyPrismTeam.HyPrism.metainfo.xml
+      - ln -s /app/HyPrism/HyPrism /app/bin/HyPrism
     sources:
       - type: dir
         path: ../../../bin/Release/net10.0/linux-x64/publish/linux-unpacked
