fix(desktop): update launcher script name in .desktop file

--- a/Properties/linux/flatpak/io.github.HyPrismTeam.HyPrism.desktop
+++ b/Properties/linux/flatpak/io.github.HyPrismTeam.HyPrism.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=HyPrism
 Comment=All in one launcher and mod manager fotr Hytale
-Exec=hyprism-launcher-wrapper.sh
+Exec=hyprism-launcher-wrapper
 Icon=io.github.HyPrismTeam.HyPrism
 Terminal=false
 Type=Application
