chore(flathub): stop tracking static Flathub manifest; generate at CI

--- a/.gitignore
+++ b/.gitignore
@@ -80,6 +80,9 @@ flatpak-repo/
 Properties/linux/flatpak/bundle
 repo
 build-dir
+flathub-bundle.tar.gz
+# Generated Flathub manifest (do not commit a static copy)
+Properties/linux/flathub/io.github.HyPrismTeam.HyPrism.yml
 
 # scripts
 scripts/run.sh
