fix: allow Linux build step to continue on error

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -130,6 +130,7 @@ jobs:
           flatpak list --system --runtime | grep -E 'freedesktop|electronjs|24\.08|Electron2' || true
 
       - name: Build Linux ${{ matrix.arch }}
+        continue-on-error: true
         run: |
           chmod +x Scripts/publish.sh
           ./Scripts/publish.sh linux flatpak --arch ${{ matrix.arch }}
